# agent-interaction

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  system-design.md
agent_review/: __init__.py  cli.py
agent_review/config/: __init__.py  default.yaml  loader.py
agent_review/messaging/: __init__.py  rabbitmq.py  schemas.py  setup.py
agent_review/orchestrator/: __init__.py  main.py  report_builder.py  scanner.py  scheduler.py  state_access.py  state_store.py  task_builder.py
agent_review/reports/: __init__.py  json_report.py  markdown_report.py
agent_review/workers/: __init__.py  base_worker.py  claude_worker.py  codex_worker.py  prompt_builder.py  runners.py
examples/: report.json  task_contract.yaml
guidelines/: code-style.md  docs.md  document-consistency.md  document-reading.md  failure-recovery.md  ir-spec.md  javascript.md  multi-agent.md  orchestration.md  paper-reading.md  python.md  security.md  testing-ml.md  testing.md  uncertainty.md
scripts/: manage.sh  run_rabbitmq.sh  start_claude_worker.sh  start_codex_worker.sh  start_orchestrator.sh
tests/: test_agent_review.py
